--- a/package.json
+++ b/package.json
@@ -31,10 +31,13 @@
     "@nestjs/mongoose": "^9.2.2",
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^4.14.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "graphql": "^16.6.0",
     "mongoose": "^7.1.2",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "ts-morph": "^18.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
